[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lux-explainer"
version = "1.2.1"
description = "Universal Local Rule-based Explainer"
readme = "README.md"
authors = [{ name = "Szymon Bobek", email = "szymon.bobek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["xai", "explainability", "model-agnostic", "rule-based"]
dependencies = ["pandas>=1.4.3",
    "numpy>=1.22.4",
    "scikit-learn>=1.1.1",
    "matplotlib>=3.5.2",
    "matplotlib-inline>=0.1.3",
    "seaborn>=0.11.2",
    "graphviz>=0.20",
    "shap>=0.41.0",
    "lime>=0.2.0.1",
    "anchor-exp>=0.0.2.0",
    "imbalanced-learn>=0.9.1",
    "gower>=0.1.2",
    "numdifftools>=0.9.41"
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/sbobek/lux"
Documentation = "https://lux-explainer.readthedocs.org"
Issues = "https://github.com/sbobek/lux/issues"